jump to top button, resolves #27

--- a/css/days-wrapper.css
+++ b/css/days-wrapper.css
@@ -142,3 +142,11 @@ body {
 button.contained.icon.fab {
   position: absolute;
 }
+.back-to-top {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+}
